tests/ui/fabricate_committed_allocations.rs
use ic_memory::CommittedAllocations;

fn main() {
    let _committed = CommittedAllocations::new(());
}
